Add Giscus to monitoring

--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -7,6 +7,8 @@ sites:
     url: https://diecknet.de
   - name: simpleip.de
     url: https://simpleip.de
+  - name: Giscus Comment System on Vercel
+    url: https://giscus.diecknet.de
 
 
 status-website:
@@ -15,7 +17,7 @@ status-website:
   # cname: demo.upptime.js.org
   baseUrl: /status
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
+  name: "diecknet Status Page"
   introTitle: "diecknet Status Page"
 
   navbar:
